@@ -1,3 +1,7 @@
+2004-12-23  John Finlay  <finlay@moeraki.com>
+
+	* newsitems.py: PyGTK 2.5.1 Reference Manual
+
 2004-12-23  Johan Dahlin  <johan@gnome.org>
 
 	* newsitems.py: PyGTK 2.5.1
